Update link from home.html to index.html

--- a/activities.html
+++ b/activities.html
@@ -13,7 +13,7 @@
     </head>
 <body style="background-color:yellow ;">
   <nav style="text-align:center; padding:10px;">
-        <a href="home.html">Home 🏡</a> <br>
+        <a href="index.html">Home 🏡</a> <br>
       <a href="Gallery.html">Gallery(images)</a>
     
   </nav >
