Update link from home.html to index.html

--- a/Gallery.html
+++ b/Gallery.html
@@ -12,7 +12,7 @@
   </h1>
   </u>
   <nav style="background-color:green ;text-align:center">
-            <a href="home.html">Home 🏡</a> <br>
+            <a href="index.html">Home 🏡</a> <br>
             <a href="activities.html" >Activity</a>
            
        </nav>
