--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ label {
    </head>
    <body style="background-color:green">
         
-       <img src="/storage/emulated/0/Pictures/Screenshot/University of Eldoret.jpg" width="100%" align="center"height="13%" align="center"alt="The image failed to load">
+       <img src="University of Eldoret.jpg" width="100%" align="center"height="13%" align="center"alt="The image failed to load">
        
       <b><h1>Welcome to home page</h1></b>
        <p>
@@ -152,3 +152,4 @@ label {
      </footer>
    </body>
 </html>
+
