Fix form input for file upload in Gallery.html

--- a/Gallery.html
+++ b/Gallery.html
@@ -27,6 +27,7 @@
     
     <form method="post" enctype="multipart/form-data">
 <input type="file" value="upload">
+      <input type="submit">
 </form>
   
 </body>
